<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg9"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hi" />

        <Button
            android:id="@+id/orderStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_order_status" />

        <Button
            android:id="@+id/newOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_items_to_cart" />

        <Button
            android:id="@+id/currentMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_current_meal" />

        <Button
            android:id="@+id/prevOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_previous_orders" />

        <Button
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_your_profile" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>